--- a/index.html
+++ b/index.html
@@ -59,10 +59,16 @@
             margin-top: 15px;
             color: #ffcc00;
         }
+        .logo {
+            width: 200px;
+            height: 200px;
+            margin: 20px auto;
+        }
     </style>
 </head>
 <body>
     <div class="container">
+        <img src="logo.png" alt="Darts Logo" class="logo">
         <p class="current-turn" id="currentTurnDisplay">Current Turn: -</p>
         <h2>Darts Score Tracker</h2>
         <label for="gameTarget">Game Target Score:</label>
