--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="logo.png" alt="Darts Logo" class="logo">
+        <img src="C:\Users\rikta100\Desktop\darts\darts\logo.png" alt="Darts Logo" class="logo">
         <p class="current-turn" id="currentTurnDisplay">Current Turn: -</p>
         <h2>Darts Score Tracker</h2>
         <label for="gameTarget">Game Target Score:</label>
