--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="logo.png" alt="Darts Logo" class="logo">
+        <a href="https://imgbb.com/"><img src="https://i.ibb.co/JRwfZmq8/logo.png" alt="logo" border="0"></a><br /><br />
         <p class="current-turn" id="currentTurnDisplay">Current Turn: -</p>
         <h2>Darts Score Tracker</h2>
         <label for="gameTarget">Game Target Score:</label>
