--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
             color: #ffcc00;
         }
         .logo {
-            width: 200px;
-            height: 200px;
-            margin: 20px auto;
+            width: 100px;
+            height: 100px;
+            margin: 10px auto;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <a href="https://imgbb.com/"><img src="https://i.ibb.co/JRwfZmq8/logo.png" alt="logo" border="0"></a><br /><br />
-        <p class="current-turn" id="currentTurnDisplay">Current Turn: -</p>
+        <a href="https://imgbb.com/"><img src="https://i.ibb.co/JRwfZmq8/logo.png" alt="logo" border="0" width="100" height="100"></a><br /><br />
+        <p class="current-turn" id="currentTurnDisplay">Na redu: -</p>
         <h2>Darts Score Tracker</h2>
         <label for="gameTarget">Game Target Score:</label>
         <input type="number" id="gameTarget" value="301">
