--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
     <div class="container">
         <a href="https://imgbb.com/"><img src="https://i.ibb.co/JRwfZmq8/logo.png" alt="logo" border="0" width="100" height="100"></a><br /><br />
-        <p class="current-turn" id="currentTurnDisplay">Na redu: -</p>
+        <p class="current-turn" id="currentTurnDisplay">Current Turn: -</p>
         <h2>Darts Score Tracker</h2>
         <label for="gameTarget">Game Target Score:</label>
         <input type="number" id="gameTarget" value="301">
