--- a/index.html
+++ b/index.html
@@ -1,122 +1,259 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pomodoro Timer</title>
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      text-align: center;
-      background-color: #121212;
-      color: #fff;
-      padding: 20px;
-    }
-    .container {
-      max-width: 400px;
-      margin: auto;
-      background: #1e1e1e;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
-    }
-    button {
-      padding: 12px;
-      background: #007bff;
-      color: white;
-      border: none;
-      cursor: pointer;
-      font-size: 16px;
-      width: 48%;
-      border-radius: 5px;
-      margin: 8px 1%;
-    }
-    button:hover {
-      background: #0056b3;
-    }
-    .timer-display {
-      font-size: 48px;
-      font-weight: bold;
-      margin: 20px 0;
-      color: #ffcc00;
-    }
-    .status {
-      font-size: 24px;
-      margin-top: 10px;
-      color: #00ffaa;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h2>Pomodoro Timer</h2>
-    <div class="timer-display" id="timerDisplay">25:00</div>
-    <p class="status" id="statusText">Ready to start</p>
-    <button onclick="startTimer()">Start</button>
-    <button onclick="pauseTimer()">Pause</button>
-  </div>
-
-  <!-- Notification Sounds -->
-  <audio id="sound1" src="https://www.soundjay.com/buttons/sounds/button-3.mp3"></audio>
-  <audio id="sound2" src="https://www.soundjay.com/buttons/sounds/button-3.mp3"></audio>
-  <audio id="sound3" src="https://www.soundjay.com/buttons/sounds/button-3.mp3"></audio>
-
-  <script>
-    let isWorkSession = true;
-    let workDuration = 25 * 60; // 25 minutes
-    let breakDuration = 5 * 60; // 5 minutes
-    let remaining = workDuration;
-    let timer;
-    let isPaused = false;
-
-    function formatTime(seconds) {
-      const m = Math.floor(seconds / 60).toString().padStart(2, '0');
-      const s = (seconds % 60).toString().padStart(2, '0');
-      return `${m}:${s}`;
-    }
-
-    function updateDisplay() {
-      document.getElementById("timerDisplay").textContent = formatTime(remaining);
-      document.getElementById("statusText").textContent = isWorkSession ? "Work Time 💼" : "Break Time ☕";
-    }
-
-    function playRandomSound() {
-      const sounds = [sound1, sound2, sound3];
-      const randomSound = sounds[Math.floor(Math.random() * sounds.length)];
-      randomSound.play();
-    }
-
-    function startTimer() {
-      if (isPaused) {
-        isPaused = false;
-        return;
-      }
-
-      clearInterval(timer);
-      updateDisplay();
-
-      timer = setInterval(() => {
-        if (!isPaused) {
-          remaining--;
-          updateDisplay();
-
-          if (remaining <= 0) {
-            clearInterval(timer);
-            playRandomSound();
-            isWorkSession = !isWorkSession;
-            remaining = isWorkSession ? workDuration : breakDuration;
-            updateDisplay();
-            startTimer();
-          }
+    <meta charset="UTF-8" />
+    <title>Enhanced Pomodoro Timer</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+            background: #f8f9fa;
         }
-      }, 1000);
-    }
+        .container {
+            max-width: 400px;
+            margin: auto;
+            text-align: center;
+            border: 2px solid #ccc;
+            padding: 20px;
+            border-radius: 10px;
+            background: #fff;
+        }
+        #sessionType {
+            font-size: 1.2rem;
+            margin-bottom: 10px;
+            display: inline-block;
+            padding: 5px 10px;
+            border-radius: 5px;
+        }
+        body.work #sessionType {
+            background: #ffcccc;
+            color: #a30000;
+        }
+        body.break #sessionType {
+            background: #ccffcc;
+            color: #006600;
+        }
+        #timer {
+            font-size: 3rem;
+            margin: 10px 0;
+        }
+        .controls button {
+            margin: 5px;
+            padding: 10px 15px;
+            font-size: 1rem;
+        }
+        .stats, .history {
+            text-align: left;
+            margin-top: 20px;
+        }
+        .history table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        .history th, .history td {
+            border: 1px solid #ccc;
+            padding: 5px;
+            text-align: left;
+        }
+        .history th {
+            background: #f0f0f0;
+        }
+    </style>
+</head>
+<body class="work">
+    <div class="container">
+        <h1>Pomodoro Timer</h1>
+        <div id="sessionType">Work Session</div>
+        <div id="timer">25:00</div>
+        <div class="controls">
+            <button id="startBtn">Start</button>
+            <button id="resetBtn">Reset</button>
+            <button id="toggleBtn">Hide Timer</button>
+        </div>
+        <div class="stats">
+            <p>Today's Pomodoros: <span id="todayCount">0</span></p>
+            <p>Streak: <span id="streakCount">0</span> days</p>
+        </div>
+        <div class="history">
+            <h2>History</h2>
+            <table id="historyTable">
+                <thead><tr><th>Date</th><th>Pomodoros</th></tr></thead>
+                <tbody></tbody>
+            </table>
+        </div>
+    </div>
+    <script>
+        // Pomodoro durations in seconds
+        const WORK_DURATION = 25 * 60;
+        const BREAK_DURATION = 5 * 60;
 
-    function pauseTimer() {
-      isPaused = true;
-    }
+        // State variables
+        let currentMode = 'work';  // 'work' or 'break'
+        let timeLeft = WORK_DURATION;
+        let timerInterval = null;
+        let timerRunning = false;
+        let showTime = true;
 
-    // For manual reset or restart, you can add another button and function if desired.
-  </script>
+        // DOM elements
+        const sessionTypeEl = document.getElementById('sessionType');
+        const timerEl = document.getElementById('timer');
+        const startBtn = document.getElementById('startBtn');
+        const resetBtn = document.getElementById('resetBtn');
+        const toggleBtn = document.getElementById('toggleBtn');
+        const todayCountEl = document.getElementById('todayCount');
+        const streakCountEl = document.getElementById('streakCount');
+        const historyTableBody = document.querySelector('#historyTable tbody');
+
+        // Load or initialize data from localStorage
+        let data = JSON.parse(localStorage.getItem('pomodoroData')) || { history: {}, streak: 0, lastDate: '' };
+
+        // Helper to get today's date string (YYYY-MM-DD)
+        function getDateString(date = new Date()) {
+            const year = date.getFullYear();
+            const month = String(date.getMonth() + 1).padStart(2, '0');
+            const day = String(date.getDate()).padStart(2, '0');
+            return `${year}-${month}-${day}`;
+        }
+
+        const today = getDateString();
+        // Ensure today's entry exists
+        if (!data.history[today]) {
+            data.history[today] = 0;
+        }
+
+        // Update displayed stats (today's count, streak, history)
+        function updateStatsUI() {
+            todayCountEl.textContent = data.history[today];
+            streakCountEl.textContent = data.streak;
+            historyTableBody.innerHTML = '';
+            // Show history for days except today
+            const dates = Object.keys(data.history).filter(date => date !== today)
+                                .sort((a, b) => b.localeCompare(a));
+            dates.forEach(date => {
+                const row = document.createElement('tr');
+                const dateCell = document.createElement('td');
+                const countCell = document.createElement('td');
+                dateCell.textContent = date;
+                countCell.textContent = data.history[date];
+                row.appendChild(dateCell);
+                row.appendChild(countCell);
+                historyTableBody.appendChild(row);
+            });
+        }
+
+        // Save data to localStorage
+        function saveData() {
+            localStorage.setItem('pomodoroData', JSON.stringify(data));
+        }
+
+        // Format time as MM:SS
+        function formatTime(seconds) {
+            const m = Math.floor(seconds / 60);
+            const s = seconds % 60;
+            return `${String(m).padStart(2, '0')}:${String(s).padStart(2, '0')}`;
+        }
+
+        // Switch to the next session (work <-> break)
+        function switchSession() {
+            if (currentMode === 'work') {
+                // Work session finished
+                // Increment today's count
+                data.history[today]++;
+                // Update streak
+                const lastDate = data.lastDate;
+                if (lastDate === today) {
+                    // Already did a Pomodoro today, no change
+                } else {
+                    const yesterday = getDateString(new Date(Date.now() - 864e5));
+                    if (lastDate === yesterday) {
+                        // Continue streak
+                        data.streak++;
+                    } else {
+                        // Reset streak
+                        data.streak = 1;
+                    }
+                    data.lastDate = today;
+                }
+                // Update UI stats and storage
+                updateStatsUI();
+                saveData();
+                // Switch to break session
+                currentMode = 'break';
+                timeLeft = BREAK_DURATION;
+                sessionTypeEl.textContent = 'Break Session';
+                document.body.classList.remove('work');
+                document.body.classList.add('break');
+            } else {
+                // Break session finished, switch to work
+                currentMode = 'work';
+                timeLeft = WORK_DURATION;
+                sessionTypeEl.textContent = 'Work Session';
+                document.body.classList.remove('break');
+                document.body.classList.add('work');
+            }
+        }
+
+        // Timer tick function (called every second)
+        function tick() {
+            if (timeLeft > 0) {
+                timeLeft--;
+                if (showTime) {
+                    timerEl.textContent = formatTime(timeLeft);
+                }
+            } else {
+                // Time is up, switch session automatically
+                clearInterval(timerInterval);
+                switchSession();
+                // Start next session automatically
+                timerInterval = setInterval(tick, 1000);
+            }
+        }
+
+        // Start/Pause button functionality
+        startBtn.addEventListener('click', function() {
+            if (!timerRunning) {
+                // Start or resume the timer
+                timerInterval = setInterval(tick, 1000);
+                timerRunning = true;
+                startBtn.textContent = 'Pause';
+            } else {
+                // Pause the timer
+                clearInterval(timerInterval);
+                timerRunning = false;
+                startBtn.textContent = 'Start';
+            }
+        });
+
+        // Reset button functionality (stop and reset timer)
+        resetBtn.addEventListener('click', function() {
+            clearInterval(timerInterval);
+            timerRunning = false;
+            // Reset to initial work session
+            currentMode = 'work';
+            timeLeft = WORK_DURATION;
+            sessionTypeEl.textContent = 'Work Session';
+            document.body.classList.remove('break');
+            document.body.classList.add('work');
+            timerEl.textContent = formatTime(timeLeft);
+            startBtn.textContent = 'Start';
+        });
+
+        // Toggle show/hide timer display
+        toggleBtn.addEventListener('click', function() {
+            showTime = !showTime;
+            if (showTime) {
+                timerEl.textContent = formatTime(timeLeft);
+                toggleBtn.textContent = 'Hide Timer';
+            } else {
+                timerEl.textContent = '';
+                toggleBtn.textContent = 'Show Timer';
+            }
+        });
+
+        // Initialize UI on load
+        timerEl.textContent = formatTime(timeLeft);
+        updateStatsUI();
+        saveData();
+    </script>
 </body>
 </html>
